[feature] Cleanup deprecation warnings.
Use new style of getDeclaredConstructor().newInstance() instead of old
newInstance() which ignores all checked exceptions of constructors.